Also adding this fix so the unittest-results box doesn't squish the activity number

--- a/bases/rsptx/interactives/runestone/activecode/css/activecode.css
+++ b/bases/rsptx/interactives/runestone/activecode/css/activecode.css
@@ -61,6 +61,7 @@
 
 .unittest-results {
     margin-left: 20px;
+    margin-bottom: 8px;
 }
 
 .ac_output {
